add custom dropdown. more styling for an animated background.

--- a/themes/mse6/assets/css/mse6.css
+++ b/themes/mse6/assets/css/mse6.css
@@ -1,13 +1,17 @@
 /*--- Global ---*/
 body {
-	background-color: #2f2f2f;
-	background-image: url("/profiles/slave1/images/noise.png");
-	background-repeat: repeat;
+	background-color: #242424;
 	color: #fafafa;
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 	font-size: 18px;
 	line-height: 1.4rem;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	overflow-x: hidden;
 }
 
 img {
@@ -25,7 +29,13 @@ button {
 	-o-transition: all .3s ease-out 0.3s;
 	transition: all .3s ease-out 0.3s;
 }
-
+#page
+canvas {
+	-webkit-transition: all .3s ease-out 0.5s;
+	-moz-transition: all .3s ease-out 0.5s;
+	-o-transition: all .3s ease-out 0.5s;
+	transition: all .3s ease-out 0.5s;
+}
 
 /*--- Buttons ---*/
 .form-submit {
@@ -35,6 +45,7 @@ button {
 	padding: 5px 10px;
 	text-shadow: 0 1px 3px rgba(0,0,0,0.5);
 	font-weight: 400;
+	cursor: pointer;
 }
 .form-submit:hover {
 	background: #198E0C;
@@ -61,6 +72,7 @@ a {
 	outline: none;
 	text-decoration: none;
 	font-weight: 400;
+	cursor: pointer;
 }
 a:hover {
 	color: #198E0C;
@@ -98,6 +110,82 @@ select {
 	display: block;
 	position: relative;
 	border: none;
+}
+.sbHolder {
+	position: relative;
+	display: inline-block;
+	width: 250px;
+	max-width: 100%;
+}
+a.sbSelector {
+	overflow: hidden;
+	color: #fafafa;	
+	background-color: #222;
+	display: block;
+	position: relative;	
+	width: 100%;
+	margin: 0;
+	padding: 0 15px;
+	height: 40px;
+	line-height: 40px;
+	font-size: 13px;
+	font-weight: 100;
+	text-transform: uppercase;
+	border: 1px solid #111;
+}
+a.sbSelector:hover {
+	background-color: #282828;
+	border-color: #222;
+}
+select,
+ul.sbOptions {
+	border: 1px solid #bbb;  /*Removes border*/
+	-webkit-appearance: none;  /*Removes default chrome and safari style*/
+	-moz-appearance: none; /* Removes Default Firefox style*/
+	appearance: none;
+	width: 100px; /*Width of select dropdown to give space for arrow image*/
+	text-indent: 0.01px; /* Removes default arrow from firefox*/
+	text-overflow: "";  /*Removes default arrow from firefox*/
+	color: #fafafa;	
+	background-color: #222;
+	display: block;
+	position: absolute;
+	z-index: 100;	
+	width: 100%;
+	top: 0 !important;
+	margin: 0;
+	padding: 0;
+	overflow-y: scroll;
+	overflow-x: hidden;
+	-webkit-box-shadow: 0 3px 5px rgba(0,0,0,.3);
+	-moz-box-shadow: 0 3px 5px rgba(0,0,0,.3);
+	box-shadow: 0 3px 5px rgba(0,0,0,.3);
+}
+select options,
+ul.sbOptions li {
+	display: block;
+	position: relative;	
+	width: 100%;
+	border: 0 !important;
+}
+ul.sbOptions li a {
+	color: #fafafa;	
+	background-color: $tan;
+	display: block;
+	padding: 7px 15px 6px;
+	font-size: 13px;
+	font-weight: 100;
+	text-transform: uppercase;
+}
+ul.sbOptions li + li a {			
+	background-color: #282828;
+	color: #eee;	
+	font-weight: normal;
+
+}
+ul.sbOptions li + li a:hover {
+	background-color: #282828;
+	color: #fff;
 }
 
 .form-item, 
@@ -188,20 +276,27 @@ table.system-status-report tr.error td.status-icon div {
 
 /*Page Styles*/
 #page {
-	background: #2f2f2f; /* Old browsers */
-	background: -moz-linear-gradient(left,  #2f2f2f 0%, #3f3f3f 50%, #2f2f2f 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#2f2f2f), color-stop(50%,#3f3f3f), color-stop(100%,#2f2f2f)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(left,  #2f2f2f 0%,#3f3f3f 50%,#2f2f2f 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(left,  #2f2f2f 0%,#3f3f3f 50%,#2f2f2f 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(left,  #2f2f2f 0%,#3f3f3f 50%,#2f2f2f 100%); /* IE10+ */
-	background: linear-gradient(to right,  #2f2f2f 0%,#3f3f3f 50%,#2f2f2f 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2f2f2f', endColorstr='#2f2f2f',GradientType=1 ); /* IE6-9 */
-    border: 5px solid #222222;
+	background: #282828; /* Old browsers */
+	background: -moz-linear-gradient(left,  #282828 0%, #363636 50%, #282828 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#282828), color-stop(50%,#363636), color-stop(100%,#282828)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(left,  #282828 0%,#363636 50%,#282828 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(left,  #282828 0%,#363636 50%,#282828 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(left,  #282828 0%,#363636 50%,#282828 100%); /* IE10+ */
+	background: linear-gradient(to right,  #282828 0%,#363636 50%,#282828 100%); /* W3C */
+    border: 5px solid #111;
     display: table;
-    margin: 0 auto;
+    margin: 0 auto 4rem;
     max-width: 92%;
     width: 1200px;
+    opacity: 0;
+    position: relative;
+    z-index: 1;
+    box-shadow: 0 1px 20px rgba(0,0,0,0.3);
 }
+body.loaded #page {
+	opacity: 1;
+}
+
 
 /*Sidebar Region*/
 #sidebar-first {
@@ -210,6 +305,8 @@ table.system-status-report tr.error td.status-icon div {
     position: relative;
     width: 24%;
     border-right: 1px solid #222;
+    background-image: url("/profiles/slave1/images/noise.png");
+	background-repeat: repeat;
 }
 #logo {
 	margin: -50px 0 0 -50px;
@@ -260,6 +357,7 @@ table.system-status-report tr.error td.status-icon div {
 	color: #E8E001;
 }
 
+
 /*Content Region*/
 #content {
 	display: table-cell;
@@ -267,4 +365,22 @@ table.system-status-report tr.error td.status-icon div {
 	vertical-align: top;
 	padding: 2%;
 	width: 76%;
+	background-image: url("/profiles/slave1/images/noise.png");
+	background-repeat: repeat;
+}
+
+.fullScreen {
+    height: 100%;
+}
+
+
+/*-- Canvas --*/
+canvas {
+    position: fixed;
+    z-index: 0;
+    top: 0;
+    opacity: 0;
+}
+body.loaded canvas {
+	opacity: 1;
 }
