--- a/themes/mse6/assets/css/mse6.css
+++ b/themes/mse6/assets/css/mse6.css
@@ -23,7 +23,8 @@ img {
 a,
 input,
 li,
-button {
+button,
+.form-item-driver .form-radios .form-item-driver {
 	-webkit-transition: all .3s ease-out 0.3s;
 	-moz-transition: all .3s ease-out 0.3s;
 	-o-transition: all .3s ease-out 0.3s;
@@ -218,7 +219,7 @@ table tr.ok .status-icon div:before {
     -moz-font-language-override: normal;
     display: inline-block;
     font-family: FontAwesome;
-    font-size: 130%;
+    font-size: 90%;
     font-size-adjust: none;
     font-stretch: normal;
     font-style: normal;
@@ -255,7 +256,7 @@ table tr.error .status-icon div:before {
     -moz-font-language-override: normal;
     display: inline-block;
     font-family: FontAwesome;
-    font-size: 130%;
+    font-size: 90%;
     font-size-adjust: none;
     font-stretch: normal;
     font-style: normal;
@@ -330,7 +331,7 @@ body.loaded #page {
     -moz-font-language-override: normal;
     display: inline-block;
     font-family: FontAwesome;
-    font-size: 130%;
+    font-size: 90%;
     font-size-adjust: none;
     font-stretch: normal;
     font-style: normal;
@@ -374,7 +375,7 @@ body.loaded #page {
 }
 
 
-/*Content Region*/
+/*-- Content Region --*/
 #content {
 	display: table-cell;
 	position: relative;
@@ -389,6 +390,61 @@ body.loaded #page {
     height: 100%;
 }
 
+.form-item-driver {
+	margin: 0;
+	display: block;
+	position: relative;
+} 
+.form-item-driver .form-radios {
+	box-sizing: border-box;
+	border: 4px solid #161616;
+    border-radius: 10px;
+    clear: both;
+    display: table;
+    margin: 2% 0 0;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+}
+.form-item-driver .form-radios .form-item-driver {
+	background-color: #222;
+    display: table-cell;
+    padding: 2%;
+    text-align: center;
+    text-shadow: 0 1px 3px #222;
+    width: 50%;
+}
+.form-item-driver .form-radios .form-item-driver.active {
+	background-color: #0dc100;
+}
+.form-item-driver .form-radios .form-item-driver.active:before {}
+
+.form-item-driver .description {
+	position: absolute;
+	right: 0;
+	top: 0;
+	margin: 0;
+}
+
+#install-settings-form #edit-mysql,
+#install-settings-form #edit-sqlite {
+	padding: 2%;
+	margin: 0 2%;
+	background-color: #383838;
+	border: 4px solid #161616;
+	border-top: none;
+}
+
+
+/*-- Loading --*/
+.progress .filled {
+    background-color: #000;
+    height: 1.5em;
+    width: 5px;
+}
+.progress .filled {
+    background: url("/profiles/slave1/images/loading.png") repeat scroll 0 0 #0072b9;
+}
 
 /*-- Canvas --*/
 canvas {
