--- a/themes/mse6/assets/css/mse6.css
+++ b/themes/mse6/assets/css/mse6.css
@@ -25,10 +25,10 @@ input,
 li,
 button,
 .form-item-driver .form-radios .form-item-driver {
-	-webkit-transition: all .3s ease-out 0.3s;
-	-moz-transition: all .3s ease-out 0.3s;
-	-o-transition: all .3s ease-out 0.3s;
-	transition: all .3s ease-out 0.3s;
+	-webkit-transition: all .3s;
+	-moz-transition: all .3s;
+	-o-transition: all .3s;
+	transition: all .3s;
 }
 #page
 canvas {
@@ -104,7 +104,7 @@ input[type=password]:focus {
 	background-color: #222;
 	color: #fff;
 	box-shadow: 0 1px 5px #222222;
-
+	outline: none;
 }
 select {
 	color: #222;
@@ -394,6 +394,7 @@ body.loaded #page {
 	margin: 0;
 	display: block;
 	position: relative;
+	cursor: pointer;
 } 
 .form-item-driver .form-radios {
 	box-sizing: border-box;
@@ -405,6 +406,9 @@ body.loaded #page {
     overflow: hidden;
     position: relative;
     width: 100%;
+}
+.form-item-driver input {
+	display: none;
 }
 .form-item-driver .form-radios .form-item-driver {
 	background-color: #222;
@@ -435,6 +439,22 @@ body.loaded #page {
 	border-top: none;
 }
 
+/*-- Submit Buttons --*/
+#edit-actions {
+	float: right;
+}
+.form-submit {
+	font-size: 15px;
+	padding: 8px 20px;
+}
+
+/*-- Labels --*/
+label {
+	font-size: 13px;
+	text-transform: uppercase;
+	letter-spacing: .02em;
+	font-weight: 500;
+}
 
 /*-- Loading --*/
 .progress .filled {
