--- a/themes/mse6/assets/css/mse6.css
+++ b/themes/mse6/assets/css/mse6.css
@@ -136,8 +136,8 @@ form {
 
 /*--- Forms ---*/
 input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], textarea {
-	border: 4px solid #222;
-	border-radius: 8px;
+	border: 3px solid #222;
+	border-radius: 5px;
 	font-weight: 400;
 	margin: .5rem 0;
 	padding: 10px;
@@ -152,7 +152,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 	width: 100%;
 }
 input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="week"]:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="time"]:focus, input[type="url"]:focus, textarea:focus {
-	border: 4px solid #0DC100;
+	border: 3px solid #0DC100;
 	padding: 10px;
 	background-color: #fff;
 	outline: none;
@@ -574,14 +574,15 @@ table.system-status-report tr.error td.status-icon div {
 
 /*Page Styles*/
 #page {
-	background: #282828; /* Old browsers */
-	background: -moz-linear-gradient(left,  #282828 0%, #363636 50%, #282828 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#282828), color-stop(50%,#363636), color-stop(100%,#282828)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(left,  #282828 0%,#363636 50%,#282828 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(left,  #282828 0%,#363636 50%,#282828 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(left,  #282828 0%,#363636 50%,#282828 100%); /* IE10+ */
-	background: linear-gradient(to right,  #282828 0%,#363636 50%,#282828 100%); /* W3C */
-    border: 5px solid #111;
+	 background: transparent;
+  /*background: #282828; 
+	background: -moz-linear-gradient(left,  #282828 0%, #363636 50%, #282828 100%); 
+	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#282828), color-stop(50%,#363636), color-stop(100%,#282828)); 
+	background: -webkit-linear-gradient(left,  #282828 0%,#363636 50%,#282828 100%); 
+	background: -o-linear-gradient(left,  #282828 0%,#363636 50%,#282828 100%); 
+	background: -ms-linear-gradient(left,  #282828 0%,#363636 50%,#282828 100%); 
+	background: linear-gradient(to right,  #282828 0%,#363636 50%,#282828 100%); */
+    /*border: 5px solid #111;*/
     border-radius: 10px;
     display: table;
     margin: 0 auto 0.5rem;
@@ -603,7 +604,7 @@ body.loaded #page {
     padding: 0;
     position: relative;
     width: 24%;
-    border-right: 1px solid #222;
+    /*border-right: 1px solid #222;*/
     background-image: url("profiles/slave1/themes/mse6/assets/images/noise.png");
 	background-repeat: repeat;
 }
@@ -765,6 +766,7 @@ ol.task-list li.active:before {
 	background-color: #383838;
 	border: 2px solid #161616;
 	border-top: none;
+  /* background: url("/profiles/slave1/themes/mse6/assets/images/bg-hull.png") repeat scroll 0 0 #383838; */
 }
 
 
